--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: 6.0.3
-  dio: 4.0.6
+  provider:
+  dio:
 
   cupertino_icons: ^1.0.2
 
